[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/gameover.gd" type="Script" id=1]
[ext_resource path="res://assets/vector_space.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/area_score.png" type="Texture" id=3]
[ext_resource path="res://fonts/font_game.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/menu_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/ui/bt_retry.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/bt_retry_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/bt_commands.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/bt_commands_hover.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/bt_quit.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/bt_quit_hover.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/bt_submit.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/bt_submit_hover.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/bt_submit_disable.png" type="Texture" id=14]
[ext_resource path="res://fonts/droid/droid-sans-mono.regular.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://assets/ui/commands.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 15 )

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 960, 534 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 950.332, 673.083 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="txtNom" type="LineEdit" parent="Control"]
margin_left = 286.309
margin_top = 287.021
margin_right = 947.309
margin_bottom = 369.021
custom_fonts/font = ExtResource( 4 )
max_length = 15
placeholder_text = "Enter your name :"

[node name="scoreFinal" type="Label" parent="Control"]
margin_left = 5.43201
margin_top = -47.2654
margin_right = 1925.43
margin_bottom = 238.735
custom_fonts/font = ExtResource( 5 )
text = "0000"
align = 1

[node name="BtRestart" type="TextureButton" parent="Control"]
margin_left = 703.0
margin_top = 955.0
margin_right = 1237.0
margin_bottom = 1061.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true

[node name="BtCommands" type="TextureButton" parent="Control"]
margin_left = 1350.0
margin_top = 955.0
margin_right = 1884.0
margin_bottom = 1061.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )
expand = true

[node name="BtQuit" type="TextureButton" parent="Control"]
margin_left = 37.0
margin_top = 955.0
margin_right = 571.0
margin_bottom = 1061.0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )
expand = true

[node name="BtSubmit" type="TextureButton" parent="Control"]
margin_left = 1113.86
margin_top = 277.33
margin_right = 1519.86
margin_bottom = 365.33
disabled = true
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 13 )
texture_disabled = ExtResource( 14 )
expand = true

[node name="positions" type="Label" parent="Control"]
margin_left = 303.0
margin_top = 443.0
margin_right = 401.0
margin_bottom = 959.0
custom_fonts/font = SubResource( 1 )
custom_constants/line_spacing = 6
autowrap = true

[node name="noms" type="Label" parent="Control"]
margin_left = 655.242
margin_top = 443.0
margin_right = 994.242
margin_bottom = 959.0
custom_fonts/font = SubResource( 1 )
custom_constants/line_spacing = 6
autowrap = true

[node name="scores" type="Label" parent="Control"]
margin_left = 1078.0
margin_top = 443.0
margin_right = 1176.0
margin_bottom = 959.0
custom_fonts/font = SubResource( 1 )
custom_constants/line_spacing = 6
autowrap = true

[node name="commands" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 534 )
texture = ExtResource( 16 )
[connection signal="text_changed" from="Control/txtNom" to="." method="_on_txtNom_text_changed"]
[connection signal="text_entered" from="Control/txtNom" to="." method="_on_txtNom_text_entered"]
[connection signal="button_down" from="Control/BtRestart" to="." method="_on_BtRestart_button_down"]
[connection signal="mouse_entered" from="Control/BtCommands" to="." method="_on_BtCommands_mouse_entered"]
[connection signal="mouse_exited" from="Control/BtCommands" to="." method="_on_BtCommands_mouse_exited"]
[connection signal="button_down" from="Control/BtQuit" to="." method="_on_BtQuit_button_down"]
[connection signal="button_down" from="Control/BtSubmit" to="." method="_on_BtSubmit_button_down"]
